# homesweethome

./: README.md  api.py  chat.py  chat_history.json  chats.db  data_call.py  news_scrape.py  pyproject.toml  redfin_scrape.py  requirements.txt  run.py  setup.py  text_analysis.py  utils.py
data/: Austin.xlsx  Chicago.xlsx  Greencastle.xlsx  Indianapolis.xlsx  Livermore.xlsx  Nashville.xlsx  New York.xlsx  San Francisco.xlsx  San Jose.xlsx  San Lorenzo.xlsx  Tracy.xlsx
